ya se muestra data de db para las vistas de zonas, falta hacer el embbed

--- a/src/main/resources/templates/AdminPages/AvailabilityZones.html
+++ b/src/main/resources/templates/AdminPages/AvailabilityZones.html
@@ -103,7 +103,7 @@
                                 <div class="resource-status">
                                     <div class="status-indicators">
                                         <span class="status-indicator online"><span id="hostsOnline">7</span> Online</span>
-                                        <span class="status-indicator warning"><span id="hostsWarning">1</span> Warning</span>
+                                        <!--<span class="status-indicator warning"><span id="hostsWarning">1</span> Warning</span>-->
                                         <span class="status-indicator offline"><span id="hostsOffline">0</span> Offline</span>
                                     </div>
                                 </div>
