--- a/src/main/resources/templates/AdminPages/AvailabilityZones.html
+++ b/src/main/resources/templates/AdminPages/AvailabilityZones.html
@@ -101,11 +101,11 @@
                             <div class="resource-details">
                                 <h4 class="resource-count"><span th:text="${globalStats.totalServers}"></span> <small>Servidores</small></h4>
                                 <div class="resource-status">
-                                    <div class="status-indicators">
+                                    <!--<div class="status-indicators">
                                         <span class="status-indicator online"><span id="hostsOnline">7</span> Online</span>
-                                        <!--<span class="status-indicator warning"><span id="hostsWarning">1</span> Warning</span>-->
+                                        <span class="status-indicator warning"><span id="hostsWarning">1</span> Warning</span>
                                         <span class="status-indicator offline"><span id="hostsOffline">0</span> Offline</span>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
