--- a/src/main/resources/templates/Fragments/Admin/header.html
+++ b/src/main/resources/templates/Fragments/Admin/header.html
@@ -38,11 +38,11 @@
                     <div class="user-dropdown-role" th:text="${userRole}">Administrador</div>
                 </div>
                 <div class="user-dropdown-items">
-                    <a th:href="@{/admin/profile}" class="user-dropdown-item">
+                    <a th:href="@{/Admin/profile}" class="user-dropdown-item">
                         <i class="fas fa-user"></i>
                         <span>Mi Perfil</span>
                     </a>
-                    <a th:href="@{/admin/settings}" class="user-dropdown-item">
+                    <a th:href="@{/Admin/settings}" class="user-dropdown-item">
                         <i class="fas fa-cog"></i>
                         <span>Configuración</span>
                     </a>
