--- a/src/main/resources/templates/Fragments/User/sidebar.html
+++ b/src/main/resources/templates/Fragments/User/sidebar.html
@@ -58,7 +58,7 @@
             </a>
         </li>
         <li>
-            <a th:href="@{/Admin/sketch}" th:classappend="${activeMenu == 'sketch' ? 'active' : ''}" data-section="sketch">
+            <a th:href="@{/User/sketch}" th:classappend="${activeMenu == 'sketch' ? 'active' : ''}" data-section="sketch">
                 <i class="fas fa-pencil-alt"></i>
                 <span>Sketch</span>
             </a>
